Mobile fixes: smaller bills, shorter 'Sources' link, drop arrow glyph
- Shrink the falling bills further on phones (they were too big).
- Shorten the footer link to just 'Sources', reduce its mobile font size,
  and anchor .bottomleft so the word isn't clipped at the left edge.
- Hide the arrow glyph in the 'tap a name' hint on mobile (rendered as a
  clunky emoji).

--- a/css/polish.css
+++ b/css/polish.css
@@ -157,14 +157,21 @@ html, body {
     box-shadow: inset 0 0 140px rgba(0, 38, 12, 0.34);
   }
   /* Scale the bills down on phones but keep them readable. */
-  .circles li:nth-child(1)  { width: 96px;  height: 41px; }
-  .circles li:nth-child(2)  { width: 62px;  height: 26px; }
-  .circles li:nth-child(3)  { width: 74px;  height: 31px; }
-  .circles li:nth-child(4)  { width: 86px;  height: 37px; }
-  .circles li:nth-child(5)  { width: 58px;  height: 25px; }
-  .circles li:nth-child(6)  { width: 110px; height: 47px; }
-  .circles li:nth-child(7)  { width: 70px;  height: 30px; }
-  .circles li:nth-child(8)  { width: 64px;  height: 27px; }
-  .circles li:nth-child(9)  { width: 80px;  height: 34px; }
-  .circles li:nth-child(10) { width: 120px; height: 51px; }
+  .circles li:nth-child(1)  { width: 62px; height: 26px; }
+  .circles li:nth-child(2)  { width: 42px; height: 18px; }
+  .circles li:nth-child(3)  { width: 50px; height: 21px; }
+  .circles li:nth-child(4)  { width: 58px; height: 25px; }
+  .circles li:nth-child(5)  { width: 40px; height: 17px; }
+  .circles li:nth-child(6)  { width: 72px; height: 31px; }
+  .circles li:nth-child(7)  { width: 46px; height: 20px; }
+  .circles li:nth-child(8)  { width: 44px; height: 19px; }
+  .circles li:nth-child(9)  { width: 54px; height: 23px; }
+  .circles li:nth-child(10) { width: 78px; height: 33px; }
+
+  /* Drop the arrow glyph on mobile (renders as a clunky emoji). */
+  .hintArrow { display: none; }
+
+  /* Smaller "Sources" link on phones, anchored so it isn't clipped at the edge. */
+  .bottomlefter a { font-size: 11px !important; }
+  .bottomleft { margin-left: 2px; transform-origin: left bottom; }
 }
